Capture xyz layer changes